<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <EditTextPreference
        android:defaultValue="@string/settings_max_distance_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_max_distance_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_max_distance_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_cp_limit_default"
        android:inputType="number"
        android:key="@string/settings_cp_limit_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_cp_limit_label" />
</PreferenceScreen>